--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        font-weight: 400;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -22,13 +23,15 @@
     </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://github.com/valleyman89" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Steven Rolph</a>.
-    </div>
+    <main>
+      <noscript>You need to enable JavaScript to run this app.</noscript>
+      <div id="root"></div>
+      <h1 class="attribution">
+        Challenge by
+        <a href="https://github.com/valleyman89" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Steven Rolph</a>.
+      </h1>
+    </main>
   </body>
 </html>
